[[changes]]
== Changes in {project-version}

=== Bug Fixes
// - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.

=== Improvements
// - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.
- https://github.com/codecentric/chaos-monkey-spring-boot/pull/204[#204] [CI] Added release workflow

=== New Features
// - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.

=== Contributors
This release was only possible because of these great humans:

- https://github.com/WtfJoke[@WtfJoke]

Thank you for your support!